--- a/package.json
+++ b/package.json
@@ -5,31 +5,54 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev src/server.ts --transpileOnly --inspect --ignore-watch node_modules",
-    "start": "ts-node src/index.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
+    "start": "ts-node src/shared/infra/http/server.ts",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "test": "jest"
   },
   "dependencies": {
-    "@types/cors": "^2.8.9",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.9",
+    "@types/ioredis": "^4.22.0",
+    "@types/mongodb": "^3.6.8",
+    "@types/nodemailer": "^6.4.0",
+    "@types/redis": "^2.8.28",
+    "aws-sdk": "^2.859.0",
     "bcryptjs": "^2.4.3",
+    "celebrate": "^13.0.4",
+    "class-transformer": "^0.4.0",
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
+    "ioredis": "^4.23.0",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.5.2",
+    "mongodb": "^3.6.4",
     "multer": "^1.4.2",
+    "nodemailer": "^6.5.0",
     "pg": "^8.5.1",
+    "rate-limiter-flexible": "^2.2.1",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.4.0",
     "typeorm": "^0.2.29",
     "uuid": "^8.3.1",
     "uuidv4": "^6.2.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.10",
+    "@types/hapi__joi": "^17.1.6",
+    "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.5",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.1",
     "ts-node-dev": "^1.1.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.2"
   }
 }
